--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Gerhard Schwanzer <geri@sdf.org>"]
 edition = "2018"
 license = "MIT"
 description = "A typetrainer-game that helps to increase your speed in typewriting"
-homepage = "https:://github.com/geri1701/typemaster"
-repository = "https:://github.com/geri1701/typemaster"
+homepage = "https://github.com/geri1701/typemaster"
+repository = "https://github.com/geri1701/typemaster"
 readme = "README.md"
 keywords = ["terminal", "tui", "input", "game"]
 categories = ["game"]
