--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ description = "A typetrainer-game that helps to increase your speed in typewriti
 homepage = "https://github.com/geri1701/typemaster"
 repository = "https://github.com/geri1701/typemaster"
 readme = "README.md"
-keywords = ["terminal", "tui", "input", "game"]
-categories = ["game"]
+keywords = ["terminal", "tui", "input"]
+categories = ["terminal"]
 [dependencies]
 console_engine = "1.4.2"
 rand = "0.8.3"
